--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -371,3 +371,7 @@
       link: https://mingtechpro.top/
       avatar: https://jsd.012700.xyz/gh/MingTechPro/drawing-bed/avatar-bg_url/202405051658049.jpg
       descr: 人性的背后是白云苍狗，愿你我都是生活的高手
+    - name: byzhao
+      link: https://byzhao.cn/
+      avatar: https://byzhao-blog-1257201044.cos.ap-beijing.myqcloud.com/blog/2024715-oqzl9yjb2r%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20240715181931.jpg
+      descr: 小猫咪能有什么怀心思呢？
